syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dtherhtun/Learning-go/grpc/rides/pb";

message Location {
  double lat = 1;
  double lng = 2;
}

enum RideType {
  UNSET = 0;
  REGULAR = 1;
  POOL = 2;
}

message StartRequest {
  string id = 1;
  string driver_id = 2;
  Location location = 3;
  repeated string passenger_ids = 4;
  google.protobuf.Timestamp time = 5;
  RideType type = 6;
}